# invoicer

./: README.md
invoicer-backend/: Cargo.toml
invoicer-backend/.sqlx/: query-84f8d346b534526e7a55d605b4fa637ca441ee466e169d4bc17f570a78e78490.json
invoicer-backend/data/: invoice.db
invoicer-backend/migrations/: 20251227050630_create_clients.sql  20251227220020_create_invoices.sql
invoicer-backend/src/: main.rs
invoicer-backend/src/handlers/: clients.rs  invoices.rs  mod.rs
invoicer-backend/src/models/: clients.rs  invoices.rs  mod.rs
invoicer-backend/src/routes/: clients.rs  invoices.rs  mod.rs
invoicer-frontend/: index.html  package.json
invoicer-frontend/src/api/: invoices.ts
invoicer-frontend/src/components/: InvoiceList.tsx
invoicer-frontend/src/types/: invoice.ts
